--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -129,7 +129,8 @@ header {
 }
 
 header {
-	margin: 8% 0;
+	// margin: 8% 0;
+	padding: 8% 0;
 }
 
 header img {
